--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
         ports:
             - "6082:6082"
 #        network_mode: "host"
-#        networks:
-#        - pag-net
+        networks:
+        - pag-net
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
 
@@ -19,8 +19,8 @@ services:
         ports:
             - "8081:8081"
 #        network_mode: "host"
-#        networks:
-#        - pag-net
+        networks:
+        - pag-net
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     projetuc:
@@ -30,8 +30,8 @@ services:
         ports:
         - "9091:9091"
 #        network_mode: "host"
-        #        networks:
-        #        - pag-net
+        networks:
+        - pag-net
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     commentaire:
@@ -41,8 +41,8 @@ services:
         ports:
             - "8083:8083"
 #        network_mode: "host"
-#        networks:
-#        - pag-net
+        networks:
+        - pag-net
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     censure:
@@ -52,8 +52,8 @@ services:
         ports:
         - "8089:8089"
 #        network_mode: "host"
-#        networks:
-#        - pag-net
+        networks:
+        - pag-net
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     debat:
@@ -63,8 +63,8 @@ services:
 #        network_mode: "host"
         ports:
         - "8088:8088"
-#        networks:
-#        - pag-net
+        networks:
+        - pag-net
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     debatuc:
@@ -74,8 +74,8 @@ services:
         ports:
         - "8095:8095"
 #        network_mode: "host"
-#        networks:
-#        - pag-net
+        networks:
+        - pag-net
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     like:
@@ -85,9 +85,8 @@ services:
         ports:
         - "8085:8085"
 #        network_mode: "host"
-#        networks:
-#        - pag-net
-#        - host
+        networks:
+        - pag-net
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     media:
@@ -97,9 +96,8 @@ services:
         ports:
         - "8086:8086"
 #        network_mode: "host"
-#        networks:
-#        - pag-net
-#        - pag-net
+        networks:
+        - pag-net
         volumes :
         - /home/media/location:/home/media/location
     note:
@@ -109,8 +107,8 @@ services:
         ports:
         - "8084:8084"
 #        network_mode: "host"
-#        networks:
-#        - pag-net
+        networks:
+        - pag-net
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     notification:
@@ -120,8 +118,8 @@ services:
         ports:
         - "8092:8092"
 #        network_mode: "host"
-#        networks:
-#        - pag-net
+        networks:
+        - pag-net
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     preference:
@@ -131,8 +129,8 @@ services:
         ports:
         - "8090:8090"
 #        network_mode: "host"
-#        networks:
-#        - pag-net
+        networks:
+        - pag-net
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     programme:
@@ -142,8 +140,8 @@ services:
         ports:
         - "8091:8091"
 #        network_mode: "host"
-#        networks:
-#        - pag-net
+        networks:
+        - pag-net
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     sondage:
@@ -153,8 +151,8 @@ services:
         ports:
         - "7087:7087"
 #        network_mode: "host"
-#        networks:
-#        - pag-net
+        networks:
+        - pag-net
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     stats:
@@ -164,8 +162,8 @@ services:
         ports:
         - "6093:6093"
 #        network_mode: "host"
-#        networks:
-#        - pag-net
+        networks:
+        - pag-net
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
     user:
@@ -175,8 +173,8 @@ services:
         ports:
         - "6087:6087"
 #        network_mode: "host"
-#        networks:
-#        - pag-net
+        networks:
+        - pag-net
         volumes :
         - /home/devops/pag/release_2.0/scripts/home:/home
 #    elastic:
@@ -235,6 +233,6 @@ services:
 #            - commentaire
 #            - projet
 #            - categorie
-#networks:
-#    pag-net:
-#        external: true
+networks:
+    pag-net:
+        external: true
